defined urls to update and view profile

--- a/rider/templates/base/rider.html
+++ b/rider/templates/base/rider.html
@@ -16,6 +16,8 @@
 
             <h1> harooo  rider </h1>
 
+            <a href="{% url 'profile' user.username %}" class="btn btn-default"> Profile </a>
+
     {% endblock %}
 
 </body>
