--- a/driver/templates/base/driver.html
+++ b/driver/templates/base/driver.html
@@ -16,6 +16,16 @@
 
             <h1> harooo  driver </h1>
 
+            <a href="{% url 'profile' user.username %}" class="btn btn-default"> Profile </a>
+
+
+    {% if request.user in request.online_now %}
+
+        {{ request.online_now }}
+
+    {% endif %}
+
+
     {% endblock %}
 
 </body>
