--- a/driver/templates/base/driver.html
+++ b/driver/templates/base/driver.html
@@ -26,6 +26,15 @@
     {% endif %}
 
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <form method="POST" action="">{% csrf_token %}
+
+        {{ form.media }}
+        {{ form.as_p }}
+
+    </form>
+
     {% endblock %}
 
 </body>
