--- a/rider/templates/base/rider.html
+++ b/rider/templates/base/rider.html
@@ -2,45 +2,201 @@
 {% load bootstrap3 %}
 {% load static %}
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    {% block styles %}
+
+        {% bootstrap_css %}
+
+            <link rel="stylesheet" href="{% static 'css/profpic.css' %}">
+
+            <link rel="stylesheet" href="{% static 'css/rider.css' %}">
+
+    {% endblock %}
+
 </head>
 <body>
+
 
     {% block content %}
 
         {{ block.super }}
 
-            <h1> harooo  rider </h1>
+            <div class="container">
 
-            <a href="{% url 'profile' user.username %}" class="btn btn-default"> Profile </a>
+                <h1 class="text-center"> PROFILE </h1>
+
+                <hr>
+
+                <h2> General Information </h2>
+
+                <hr>
+
+                <div class="row">
+
+                    <a href="{% url 'index-rider' %}" class="btn btn-default"> Profile </a>
+
+                    <a href="{% url 'travel' %}" class="btn btn-default"> Travel </a>
+
+                    <a href="{% url 'driver-list' %}" class="btn btn-default"> Drivers </a>
+
+                    <a href="" class="btn btn-default"> Reviews </a>
+
+                    <a href="/landing" class="btn btn-default" style="float: right;"> Sign In as Driver </a>
+
+                </div>
+
+                <hr>
 
 
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+                <div class="row">
 
-            <form method="POST" action="">
+                    <div class="col-sm-6 col-md-6">
 
-                {% csrf_token %}
+                        <div class="row">
 
-                {{ form.media }}
+                            <h4> Name </h4>
 
-                {{ form.as_p }}
+                                <div class="col-md-6">
 
-            </form>
+                                    <p> {{ user.first_name }} </p>
+
+                                </div>
+
+                                <div class="col-md-6">
+
+                                    <p> {{ user.last_name }} </p>
+
+                                </div>
+
+                        </div>
+
+                    </div>
+
+                    <div class="col-md-6">
+
+                        <div class="row">
+
+                            <div class="col-sm-6 col-md-6">
+
+                                <h4> Location </h4>
+
+                            </div>
+
+                            <br>
+
+                            <div class="col-sm-6 col-md-6">
+
+                                <br>
+
+                                {% if profile.gen_location%}
+
+                                <p> {{ profile.gen_location }}</p>
+
+                                {% endif %}
+
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+
+                <hr>
+
+
+
+                <div class="row">
+
+                    <div class="col-sm-6 col-md-6">
+
+                        <div class="row">
+
+                            <div class="col-sm-6 col-md-6">
+
+                                <h4> Profile Photo </h4>
+
+                            </div>
+
+                            <br>
+
+                            <div class="col-sm-6 col-md-6">
+
+                                <br>
+
+                                {%if profile.profpic %}
+
+                                    <img src="{{profile.profpic.url}}" class="img-responsive" alt="{{profile.profpic.url}}" id="profpic">
+                                {% else %}
+                                    <h1>No pic picking</h1>
+                                {% endif%}
+
+                            </div>
+
+                        </div>
+
+                    </div>
+
+
+                    <div class="col-sm-6 col-md-6">
+
+                        <div class="row">
+
+                            <div class="col-sm-6 col-md-6">
+
+                                <h4> Mobile </h4>
+
+                            </div>
+
+                            <br>
+
+                            <div class="col-sm-6 col-md-6">
+
+                                <br>
+
+                                <p> Kenya +254 </p>
+
+                                <p> {{ profile.mobile }}</p>
+
+                            </div>
+
+                        </div>
+
+                    </div>
+
+
+                </div>
+
+                <hr>
+
+                <div class="row">
+
+                    <h4> Email Address </h4>
+
+                    {{ user.email }}
+
+                </div>
+
+
+                <hr>
+
+                <div class="row" style="text-align: center;">
+
+                    <a href="{% url 'update-profile-rider' %}" class="btn btn-default"> Update</a>
+
+                </div>
+
+            </div>
 
     {% endblock %}
 
-
-    {% block scripts %}
-
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-        {% bootstrap_javascript %}
-
-    {% endblock %}
 
 </body>
 </html>
