--- a/rider/templates/profiles/profile.html
+++ b/rider/templates/profiles/profile.html
@@ -26,6 +26,9 @@
 
                 <hr>
 
+
+                {% for item in profile %}
+
                 <div class="row">
 
                     <div class="col-sm-6 col-md-6">
@@ -36,13 +39,13 @@
 
                                 <div class="col-md-6">
 
-                                    <p> {{ item.mobile }} </p>
+                                    <p> {{ user.first_name }} </p>
 
                                 </div>
 
                                 <div class="col-md-6">
 
-                                    <p> {{ item.user.last_name }} </p>
+                                    <p> {{ user.last_name }} </p>
 
                                 </div>
 
@@ -75,7 +78,7 @@
 
                             <div class="col-sm-6 col-md-6">
 
-                                <p> photo </p>
+                                <img src="{{ item.profpic.url }}" class="img-responsive" alt="profpic">
 
                             </div>
 
@@ -97,7 +100,7 @@
 
                                 <p> Kenya +254 </p>
 
-                                <p> {{ mobile }}</p>
+                                <p> {{ item.mobile }}</p>
 
                             </div>
 
@@ -113,7 +116,11 @@
 
                     <h4> Email Address </h4>
 
+                    {{ user.email }}
+
                 </div>
+
+                {% endfor  %}
 
                 <hr>
 
