--- a/driver/templates/base/driver.html
+++ b/driver/templates/base/driver.html
@@ -7,6 +7,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    {% block styles %}
+
+        {% bootstrap_css %}
+
+            <link rel="stylesheet" href="{% static 'css/profpic.css' %}">
+
+            <link rel="stylesheet" href="{% static 'css/driver.css' %}">
+
+    {% endblock %}
+
 </head>
 <body>
 
@@ -14,26 +25,136 @@
 
         {{ block.super }}
 
-            <h1> harooo  driver </h1>
 
-            <a href="{% url 'profile' user.username %}" class="btn btn-default"> Profile </a>
+            <div class="container">
+
+                <h1 class="text-center"> PROFILE </h1>
+
+                <hr>
+
+                <h2> General Information </h2>
+
+                <hr>
+
+                <div class="row">
+
+                    <a href="{% url 'index-driver' %}" class="btn btn-default"> Profile </a>
+
+                    <a href="" class="btn btn-default"> Manage Documents </a>
+
+                    <a href="{% url 'vehicle' %}" class="btn btn-default"> Vehicles </a>
+
+                    <a href="" class="btn btn-default"> Reviews </a>
+
+                    <a href="{% url 'driver-location' %}" class="btn btn-default"> Location </a>
+
+                    <a href="/landing" class="btn btn-default" style="float: right;"> Sign In as Rider </a>
+
+                </div>
+
+                <hr>
+
+                {% for item in profile %}
+
+                    <div class="row">
+
+                        <img src="" class="img-responsive" alt="profpic"> {{ user.first_name }} <br> {{ user.last_name }}
+
+                    </div>
+
+                    <div class="row">
+
+                        <h3> Email </h3>
+
+                        <br>
+
+                        <p> {{ user.email }} </p>
+
+                    </div>
 
 
-    {% if request.user in request.online_now %}
+                    <div class="row">
 
-        {{ request.online_now }}
+                        <div class="col-sm-6 col-md-6">
 
-    {% endif %}
+                            <div class="row">
+
+                                <h3> Mobile </h3>
+
+                                <br>
+
+                                {% if profile.mobile %}
+
+                                    <p> {{ profile.mobile }} </p>
+
+                                {% endif %}
+
+                            </div>
+
+                        </div>
+
+                        <div class="col-sm-6 col-md-6">
+
+                            <div class="row">
+
+                                <h3> Language </h3>
+
+                                <br>
+
+                                {% if profile.language %}
+
+                                    <p> {{ profile.language }} </p>
+
+                                {% endif %}
+
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                    <div class="row">
+
+                        <h3> Address </h3>
+
+                        <br>
+
+                        {% if profile.address %}
+
+                            <p> {{ profile.address }} </p>
+
+                        {% endif %}
+
+                    </div>
+
+                    <div class="row">
+
+                        <h3> City </h3>
+
+                        <br>
+
+                        {% if profile.city %}
+
+                            <p> {{ profile.city }} </p>
+
+                        {% endif %}
+
+                    </div>
+
+                    <hr>
+
+                    <div class="row" style="text-align: center;">
+
+                        <a href="{% url 'update-profile-driver' %}" class="btn btn-default"> Update </a>
+
+                    </div>
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+                {% endfor %}
 
-    <form method="POST" action="">{% csrf_token %}
 
-        {{ form.media }}
-        {{ form.as_p }}
+            </div>
 
-    </form>
 
     {% endblock %}
 
