--- a/rider/templates/travels/travel.html
+++ b/rider/templates/travels/travel.html
@@ -56,11 +56,11 @@
 
                     <div class="col-sm-5 col-md-5" style="text-align: center">
 
-                        {% if profile.profpic %}
+                        {% for profile in profile %}
 
-                            <img src="{{ profile.profpic }}" alt="image" class="img-responsive">
+                            <img src="{{ profile.profpic.url}}" alt="image" class="img-responsive">
 
-                        {% endif %}
+                        {% endfor %}
 
                     </div>
 
@@ -94,11 +94,11 @@
 
                                 <h3> Mobile </h3> <br>
 
-                                {% if profile.mobile %}
+                                {% for profile in profile %}
 
                                 <p style="text-align: center"> {{ profile.mobile }}</p>
 
-                                {% endif %}
+                                {% endfor %}
 
                             </div>
 
@@ -111,11 +111,11 @@
 
                                 <h3> Current Location </h3> <br>
 
-                                {% if traveling.location %}
+                                {% for traveling in traveling %}
 
-                                <p style="text-align: center"> {{ traveling.location }} </p>
+                                    <p style="text-align: center"> {{ traveling.location }} </p>
 
-                                {% endif %}
+                                {% endfor %}
 
                             </div>
 
@@ -123,11 +123,11 @@
 
                                 <h3> Destination </h3> <br>
 
-                                {% if traveling.destination %}
+                                {% for traveling in traveling %}
 
-                                <p style="text-align: center"> {{ traveling.destination }} </p>
+                                    <p style="text-align: center"> {{ traveling.destination }} </p>
 
-                                {% endif %}
+                                {% endfor %}
 
                             </div>
 
@@ -146,7 +146,29 @@
 
                 </div>
 
+                <div id="map">
+
+
+
+                </div>
+
             </div>
+
+    {% endblock %}
+
+
+
+    {% block scripts %}
+
+            <script type="text/javascript" src="{% static 'js/map.js' %}"></script>
+
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+            <script type="text/javascript"src="http://www.google.com/jsapi?key=AIzaSyBqU-vgzJDJletUr1_O7AcnF8f0es1obu8">
+
+            <script type="text/javascript"charset="utf-8">google.load("maps","2.x"); google.load("jquery","1.3.1");</script>
+
+        {% bootstrap_javascript %}
 
     {% endblock %}
 
