--- a/driver/templates/locations/location.html
+++ b/driver/templates/locations/location.html
@@ -102,7 +102,7 @@
 
                             <div class="col-sm-6 col-md-6">
 
-                                <h3> Location </h3>
+                                <h3> Current Location </h3>
 
                                 {% for location in location %}
 
@@ -169,7 +169,75 @@
 
                 </div>
 
+                <br>
+
+                <div class="row">
+
+                    <div id="map"></div>
+                    <script>
+                        // Note: This example requires that you consent to location sharing when
+                        // prompted by your browser. If you see the error "The Geolocation service
+                        // failed.", it means you probably did not give permission for the browser to
+                        // locate you.
+                        var map, infoWindow;
+
+                        function initMap() {
+                            map = new google.maps.Map(document.getElementById('map'), {
+                                center: {lat: -34.397, lng: 150.644},
+                                zoom: 14
+                            });
+                            infoWindow = new google.maps.InfoWindow;
+
+                            // Try HTML5 geolocation.
+                            if (navigator.geolocation) {
+                                navigator.geolocation.getCurrentPosition(function (position) {
+                                    var pos = {
+                                        lat: position.coords.latitude,
+                                        lng: position.coords.longitude
+                                    };
+
+                                    infoWindow.setPosition(pos);
+                                    infoWindow.setContent('Location found.');
+                                    infoWindow.open(map);
+                                    map.setCenter(pos);
+                                }, function () {
+                                    handleLocationError(true, infoWindow, map.getCenter());
+                                });
+                            } else {
+                                // Browser doesn't support Geolocation
+                                handleLocationError(false, infoWindow, map.getCenter());
+                            }
+                        }
+
+                        function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+                            infoWindow.setPosition(pos);
+                            infoWindow.setContent(browserHasGeolocation ?
+                                'Error: The Geolocation service failed.' :
+                                'Error: Your browser doesn\'t support geolocation.');
+                            infoWindow.open(map);
+                        }
+                    </script>
+
+                </div>
+
             </div>
+
+    {% endblock %}
+
+
+    {% block scripts %}
+
+            <script type="text/javascript" src="{% static 'js/map.js' %}"></script>
+
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+            <script async defer
+                src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBqU-vgzJDJletUr1_O7AcnF8f0es1obu8&callback=initMap">
+            </script>
+
+            <script type="text/javascript"charset="utf-8">google.load("maps","2.x"); google.load("jquery","1.3.1");</script>
+
+        {% bootstrap_javascript %}
 
     {% endblock %}
 
