--- a/driver/templates/locations/location.html
+++ b/driver/templates/locations/location.html
@@ -44,7 +44,7 @@
 
                     <a href="{% url 'vehicle' %}" class="btn btn-default"> Vehicles </a>
 
-                    <a href="" class="btn btn-default"> Reviews </a>
+                    <a href="{% url 'driver-reviews' user.id %}" class="btn btn-default"> Reviews </a>
 
                     <a href="{% url 'driver-location' %}" class="btn btn-default"> Location </a>
 
@@ -163,7 +163,7 @@
 
                     <div class="row" style="text-align: center;">
 
-                        <a href="{% url 'update-vehicle-details' %}" class="btn btn-default"> Update </a>
+                        <a href="{% url 'update_driver_location_details' %}" class="btn btn-default"> Update </a>
 
                     </div>
 
@@ -184,8 +184,10 @@
                         function initMap() {
                             map = new google.maps.Map(document.getElementById('map'), {
                                 center: {lat: -34.397, lng: 150.644},
-                                zoom: 14
+                                zoom: 15
                             });
+
+
                             infoWindow = new google.maps.InfoWindow;
 
                             // Try HTML5 geolocation.
@@ -196,8 +198,17 @@
                                         lng: position.coords.longitude
                                     };
 
+                                    var marker = new google.maps.Marker({
+                                        position: pos,
+                                        map: map
+                                    });
+
+                                    var directionsDisplay = new google.maps.DirectionsRenderer({map: map});
+
+                                    var stepDisplay = new google.maps.InfoWindow;
+
+
                                     infoWindow.setPosition(pos);
-                                    infoWindow.setContent('Location found.');
                                     infoWindow.open(map);
                                     map.setCenter(pos);
                                 }, function () {
@@ -216,6 +227,7 @@
                                 'Error: Your browser doesn\'t support geolocation.');
                             infoWindow.open(map);
                         }
+
                     </script>
 
                 </div>
