--- a/driver/templates/locations/update-driver-location.html
+++ b/driver/templates/locations/update-driver-location.html
@@ -33,7 +33,7 @@
 
                     <a href="{% url 'vehicle' %}" class="btn btn-default"> Vehicles </a>
 
-                    <a href="" class="btn btn-default"> Reviews </a>
+                    <a href="{% url 'driver-reviews' user.id %}" class="btn btn-default"> Reviews </a>
 
                     <a href="{% url 'driver-location' %}" class="btn btn-default"> Location </a>
 
@@ -43,104 +43,77 @@
 
                 <hr>
 
-                <div class="row">
 
-                    {% for vehicle in vehicles %}
+                <form action="{% url 'update_driver_location_details' %}" method="post">
 
-                    <div class="col-sm-5 col-md-5">
+                    {% csrf_token %}
 
-                        <img src="{{ vehicle.image.url}}" alt="image" class="img-responsive">
+                    <div class="row">
+
+                        <div class="col-sm-6 col-md-6">
+
+                            <div class="form-group">
+
+                                {{ form.place.label }} {{ form.place }} <br>
+
+                                    {{ form.place.errors }}
+
+                            </div>
+
+                        </div>
+
+                        <div class="col-sm-6 col-md-6">
+
+                            <div class="form-group">
+
+                                {{ form.destination.label }} {{ form.destination }} <br>
+
+                                    {{ form.destination.errors }}
+
+                            </div>
+
+                        </div>
 
                     </div>
 
-                    <div class="col-sm-7 col-md-7">
+                    <div class="row">
 
-                        <div class="row">
+                        <div class="col-sm-6 col-md-6">
 
-                            <div class="col-sm-6 col-md-6">
+                            <div class="form-group">
 
-                                <div class="form-group">
+                                {{ form.total_riders.label }} {{ form.total_riders }} <br>
 
-                                    {{ profile_form.make.label }}      {{ profile_form.make }} <br>
-
-                                        {{ profile_form.make.errors }}
-
-                                </div>
-
-                            </div>
-
-                            <div class="col-sm-6 col-md-6">
-
-                                <div class="form-group">
-
-                                    {{ profile_form.model.label }}      {{ profile_form.make }} <br>
-
-                                        {{ profile_form.make.errors }}
-
-                                </div>
+                                    {{ form.total_riders.errors }}
 
                             </div>
 
                         </div>
 
-                        <div class="row">
+                        <div class="col-sm-6 col-md-6">
 
-                            <h3> Registration </h3> <br>
+                            <div class="form-group">
 
-                            <p> {{ vehicle.registration }}</p>
+                                {{ form.needed_riders.label }} {{ form.needed_riders }} <br>
 
-                        </div>
-
-                        {% endfor %}
-
-                        {% for item in location %}
-
-                        <div class="row">
-
-                            <div class="col-sm-6 col-md-6">
-
-                                <h3> Location </h3> <br>
-
-                                <p> {{ item.place }}</p>
-
-                            </div>
-
-                            <div class="col-sm-6 col-md-6">
-
-                                <h3> Destination </h3> <br>
-
-                                <p> {{ item.destination }} </p>
+                                    {{ form.needed_riders.errors }}
 
                             </div>
 
                         </div>
-
-                        <div class="row">
-
-                            <div class="col-sm-6 col-md-6">
-
-                                <h3> Total Seats  </h3> <br>
-
-                                <p> {{ item.total_riders }}</p>
-
-                            </div>
-
-                            <div class="col-sm-6 col-md-6">
-
-                                <h3> Free Seats </h3> <br>
-
-                                <p> {{ item.needed_riders }} </p>
-
-                            </div>
-
-                        </div>
-
-                        {% endfor %}
 
                     </div>
 
-                </div>
+                    <div class="row" style="text-align: center;">
+
+                        <button type="submit" class="text-center"> Save Changes </button>
+
+                    </div>
+
+                </form>
+
             </div>
+
 
     {% endblock %}
 
