--- a/driver/templates/vehicles/vehicle.html
+++ b/driver/templates/vehicles/vehicle.html
@@ -44,7 +44,7 @@
 
                     <a href="{% url 'vehicle' %}" class="btn btn-default"> Vehicles </a>
 
-                    <a href="" class="btn btn-default"> Reviews </a>
+                    <a href="{% url 'driver-reviews' user.id %}" class="btn btn-default"> Reviews </a>
 
                     <a href="{% url 'driver-location' %}" class="btn btn-default"> Location </a>
 
