--- a/rider/templates/travels/travel.html
+++ b/rider/templates/travels/travel.html
@@ -43,7 +43,7 @@
 
                     <a href="{% url 'driver-list' %}" class="btn btn-default"> Drivers </a>
 
-                    <a href="" class="btn btn-default"> Reviews </a>
+                    <a href="{% url 'rider-reviews' user.id %}" class="btn btn-default"> Reviews </a>
 
                     <a href="/landing" class="btn btn-default" style="float: right;"> Sign In as Driver </a>
 
@@ -133,7 +133,6 @@
 
                         </div>
 
-    width: 500px;
                     </div>
 
                 </div>
@@ -152,47 +151,7 @@
 
                     <div id="map"></div>
                 <script>
-                    // Note: This example requires that you consent to location sharing when
-                    // prompted by your browser. If you see the error "The Geolocation service
-                    // failed.", it means you probably did not give permission for the browser to
-                    // locate you.
-                    var map, infoWindow;
 
-                    function initMap() {
-                        map = new google.maps.Map(document.getElementById('map'), {
-                            center: {lat: -34.397, lng: 150.644},
-                            zoom: 14
-                        });
-                        infoWindow = new google.maps.InfoWindow;
-
-                        // Try HTML5 geolocation.
-                        if (navigator.geolocation) {
-                            navigator.geolocation.getCurrentPosition(function (position) {
-                                var pos = {
-                                    lat: position.coords.latitude,
-                                    lng: position.coords.longitude
-                                };
-
-                                infoWindow.setPosition(pos);
-                                infoWindow.setContent('Location found.');
-                                infoWindow.open(map);
-                                map.setCenter(pos);
-                            }, function () {
-                                handleLocationError(true, infoWindow, map.getCenter());
-                            });
-                        } else {
-                            // Browser doesn't support Geolocation
-                            handleLocationError(false, infoWindow, map.getCenter());
-                        }
-                    }
-
-                    function handleLocationError(browserHasGeolocation, infoWindow, pos) {
-                        infoWindow.setPosition(pos);
-                        infoWindow.setContent(browserHasGeolocation ?
-                            'Error: The Geolocation service failed.' :
-                            'Error: Your browser doesn\'t support geolocation.');
-                        infoWindow.open(map);
-                    }
                 </script>
 
                 </div>
