pushing to heroku

--- a/rider/templates/base/driver-list.html
+++ b/rider/templates/base/driver-list.html
@@ -46,7 +46,7 @@
 
                         {% if request.user in request.online_now %}
 
-                            {{ request.online_now }}
+                            {{ request.online_now }} <br>
 
                         {% endif %}
 
