--- a/rider/templates/base/driver-list.html
+++ b/rider/templates/base/driver-list.html
@@ -44,11 +44,28 @@
 
                     <a href="/driver">
 
-                        {% if request.user in request.online_now %}
+                        <div class="row">
 
-                            {{ request.online_now }} <br>
+                            {% if request.user in request.online_now %}
 
-                        {% endif %}
+                                <div class="co-md-2">
+
+                                    {{ request.online_now }}
+
+                                </div>
+
+                            {% endif %}
+
+                        </div>
+
+
+
+
+                        {% for request.user in request.online_now %}
+
+                            {{ request.online.now }}
+
+                        {% endfor %}
 
                     </a>
 
