pushing to heroku

--- a/rider/templates/base/driver-list.html
+++ b/rider/templates/base/driver-list.html
@@ -40,9 +40,6 @@
 
                 <hr>
 
-                <div class="row">
-
-
 
                         <div class="row">
 
@@ -50,16 +47,13 @@
 
                                 <div class="co-md-2">
 
-                                    <a href="/driver"> {{ request.online_now }} </a>
+                                    <a href="/driver"> {{ request.user }} </a>
 
                                 </div>
 
                             {% endif %}
 
                         </div>
-
-
-                </div>
 
             </div>
 
