--- a/driver/templates/base/driver.html
+++ b/driver/templates/base/driver.html
@@ -32,10 +32,6 @@
 
                 <hr>
 
-                <h2> General Information </h2>
-
-                <hr>
-
                 <div class="row">
 
                     <a href="{% url 'index-driver' %}" class="btn btn-default"> Profile </a>
@@ -48,30 +44,76 @@
 
                     <a href="{% url 'driver-reviews' user.id %}" class="btn btn-default"> Reviews </a>
 
+                    <a href="{% url 'book' user.id %}" class="btn btn-default"> Book </a>
+
                     <a href="/landing" class="btn btn-default" style="float: right;"> Sign In as Rider </a>
 
                 </div>
 
                 <hr>
 
+                <h2> General Information </h2>
+
+                <hr>
 
                     <div class="row">
 
-                        {% if profile.profpic %}
+                    <div class="col-sm-6 col-md-6">
 
-                            <img src="{{profile.profpic.url}}" class="img-responsive" alt="profpic"> {{ user.first_name }} <br> {{ user.last_name }}
+                        <div class="row">
 
-                        {% endif %}
+                            <div class="col-sm-6 col-md-6">
+
+                                <h4> Profile Photo </h4>
+
+                            </div>
+
+                            <br>
+
+                            <div class="col-sm-6 col-md-6">
+
+                                <br>
+
+                                {%if profile.profpic %}
+
+                                    <img src="{{profile.profpic.url}}" class="img-responsive" alt="{{profile.profpic.url}}" id="profpic">
+                                {% else %}
+                                    <h1>No pic picking</h1>
+                                {% endif%}
+
+                            </div>
+
+                        </div>
 
                     </div>
 
-                    <div class="row">
 
-                        <h3> Email </h3>
+                    <div class="col-sm-6 col-md-6">
 
-                        <p> {{ user.email }} </p>
+                        <div class="row">
+
+                            <div class="col-sm-6 col-md-6">
+
+                                <h4> Email </h4>
+
+                            </div>
+
+                            <br>
+
+                            <div class="col-sm-6 col-md-6">
+
+                                <br>
+
+                                <p> {{ profile.user.email }}</p>
+
+                            </div>
+
+                        </div>
 
                     </div>
+
+
+                </div>
 
 
                     <div class="row">
@@ -80,11 +122,11 @@
 
                             <div class="row">
 
-                                <h3> Mobile </h3>
+                                <h4> Mobile </h4>
 
                                 {% if profile.mobile %}
 
-                                    <p> {{ profile.mobile }} </p>
+                                    <p style="text-align: center;"> {{ profile.mobile }} </p>
 
                                 {% endif %}
 
@@ -96,11 +138,11 @@
 
                             <div class="row">
 
-                                <h3> Language </h3>
+                                <h4> Language </h4>
 
                                 {% if profile.language %}
 
-                                    <p> {{ profile.language }} </p>
+                                    <p style="text-align: center;"> {{ profile.language }} </p>
 
                                 {% endif %}
 
@@ -114,11 +156,11 @@
 
                         <div class="col-sm-6 col-md-6">
 
-                            <h3> Address </h3>
+                            <h4> Address </h4>
 
                             {% if profile.address %}
 
-                                <p> {{ profile.address }} </p>
+                                <p style="text-align: center;"> {{ profile.address }} </p>
 
                             {% endif %}
 
@@ -126,11 +168,11 @@
 
                         <div class="col-sm-6 col-md-6">
 
-                            <h3> City </h3>
+                            <h4> City </h4>
 
                             {% if profile.city %}
 
-                                <p> {{ profile.city }} </p>
+                                <p style="text-align: center;"> {{ profile.city }} </p>
 
                             {% endif %}
 
@@ -141,19 +183,20 @@
 
                     </div>
 
-                    <div class="row">
-
-
-
-                    </div>
-
                     <hr>
+
+                {% if profile %}
 
                     <div class="row" style="text-align: center;">
 
                         <a href="{% url 'update-profile-driver' %}" class="btn btn-default"> Update </a>
 
                     </div>
+
+                {% else %}
+
+
+                {% endif %}
 
 
             </div>
