--- a/driver/templates/base/reviews.html
+++ b/driver/templates/base/reviews.html
@@ -32,10 +32,6 @@
 
                 <hr>
 
-                <h2> General Information </h2>
-
-                <hr>
-
                 <div class="row">
 
                     <a href="{% url 'index-driver' %}" class="btn btn-default"> Profile </a>
@@ -48,9 +44,15 @@
 
                     <a href="{% url 'driver-reviews' user.id %}" class="btn btn-default"> Reviews </a>
 
+                    <a href="{% url 'book' user.id %}" class="btn btn-default"> Book </a>
+
                     <a href="/landing" class="btn btn-default" style="float: right;"> Sign In as Rider </a>
 
                 </div>
+
+                <hr>
+
+                <h2> Reviews </h2>
 
                 <hr>
 
