--- a/driver/templates/locations/location.html
+++ b/driver/templates/locations/location.html
@@ -32,10 +32,6 @@
 
                 <hr>
 
-                <h2> General Information </h2>
-
-                <hr>
-
                 <div class="row">
 
                     <a href="{% url 'index-driver' %}" class="btn btn-default"> Profile </a>
@@ -44,13 +40,19 @@
 
                     <a href="{% url 'vehicle' %}" class="btn btn-default"> Vehicles </a>
 
+                    <a href="{% url 'driver-location' %}" class="btn btn-default"> Location </a>
+
                     <a href="{% url 'driver-reviews' user.id %}" class="btn btn-default"> Reviews </a>
 
-                    <a href="{% url 'driver-location' %}" class="btn btn-default"> Location </a>
+                    <a href="{% url 'book' user.id %}" class="btn btn-default"> Book </a>
 
                     <a href="/landing" class="btn btn-default" style="float: right;"> Sign In as Rider </a>
 
                 </div>
+
+                <hr>
+
+                <h2> Location Info on Driver </h2>
 
                 <hr>
 
@@ -156,8 +158,6 @@
                         </div>
 
                     </div>
-
-
 
                     <hr>
 
