--- a/driver/templates/vehicles/update-vehicle-details.html
+++ b/driver/templates/vehicles/update-vehicle-details.html
@@ -21,10 +21,6 @@
 
                 <hr>
 
-                <h2> General Information </h2>
-
-                <hr>
-
                 <div class="row">
 
                     <a href="{% url 'index-driver' %}" class="btn btn-default"> Profile </a>
@@ -40,6 +36,10 @@
                     <a href="/landing" class="btn btn-default" style="float: right;"> Sign In as Rider </a>
 
                 </div>
+
+                <hr>
+
+                <h2> Vehicle Details </h2>
 
                 <hr>
 
@@ -82,7 +82,7 @@
 
                             <div class="form-group">
 
-                                {{ form.year.label }} {{ form.year }} <br>
+                                <p> Manufacture Year  {{ form.year }} </p> <br>
 
                                 {{ form.year.errors }}
 
