--- a/driver/templates/vehicles/vehicle.html
+++ b/driver/templates/vehicles/vehicle.html
@@ -32,11 +32,7 @@
 
                 <hr>
 
-                <h2> General Information </h2>
-
-                <hr>
-
-                <div class="row">
+               <div class="row">
 
                     <a href="{% url 'index-driver' %}" class="btn btn-default"> Profile </a>
 
@@ -44,13 +40,19 @@
 
                     <a href="{% url 'vehicle' %}" class="btn btn-default"> Vehicles </a>
 
+                    <a href="{% url 'driver-location' %}" class="btn btn-default"> Location </a>
+
                     <a href="{% url 'driver-reviews' user.id %}" class="btn btn-default"> Reviews </a>
 
-                    <a href="{% url 'driver-location' %}" class="btn btn-default"> Location </a>
+                    <a href="{% url 'book' user.id %}" class="btn btn-default"> Book </a>
 
                     <a href="/landing" class="btn btn-default" style="float: right;"> Sign In as Rider </a>
 
                 </div>
+
+                <hr>
+
+                <h2> Vehicle Details </h2>
 
                 <hr>
 
@@ -113,7 +115,7 @@
 
                 </div>
 
-                <div class="row">
+                <div class="row" style="width: 500px; text-align: center">
 
                     <h3> Image </h3>
 
