--- a/driver/templates/book/bookings.html
+++ b/driver/templates/book/bookings.html
@@ -36,8 +36,6 @@
 
                     <a href="{% url 'index-driver' %}" class="btn btn-default"> Profile </a>
 
-                    <a href="" class="btn btn-default"> Manage Documents </a>
-
                     <a href="{% url 'vehicle' %}" class="btn btn-default"> Vehicles </a>
 
                     <a href="{% url 'driver-location' %}" class="btn btn-default"> Location </a>
@@ -76,7 +74,7 @@
 
                                 <h3> Name </h3> <br>
 
-                                {% for rider in rider %}
+                                {% if rider %}
 
                                 <div class="row" style="text-align: center">
 
@@ -94,7 +92,7 @@
 
                                 </div>
 
-                                {% endfor %}
+                                {% endif %}
 
                             </div>
 
@@ -144,6 +142,8 @@
                     </div>
 
                 </div>
+
+                <a href="{% url 'book' user.id %}"> Book </a>
 
             </div>
 
